--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,6 @@ language: objective-c
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/Dekoter.xcworkspace -scheme Dekoter-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+# - set -o pipefail && xcodebuild test -workspace Example/Dekoter.xcworkspace -scheme Dekoter-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
+xcodebuild test -workspace Example/Dekoter.xcworkspace -scheme Dekoter-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 # - pod lib lint
