--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
-# references:
-# * http://www.objc.io/issue-6/travis-ci.html
-# * https://github.com/supermarin/xcpretty#usage
-
 osx_image: xcode8
 language: objective-c
-cache: cocoapods
-podfile: Example/Podfile
-before_install:
-- pod install --project-directory=Example
+# cache: cocoapods
+# podfile: Example/Podfile
+# before_install:
+# - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -workspace Example/Dekoter.xcworkspace -scheme Dekoter-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+- set -o pipefail && xctool -workspace Example/Dekoter.xcworkspace -scheme Dekoter-Example -sdk iphonesimulator10.2 run-tests
+# - pod lib lint
